# SemesterLeistung

./: AUTHORS  MAINTAINERS  Makefile  Makefile.am  Makefile.in  README  aclocal.m4  autogen.sh  config.h  config.h.in  config.status  configure  configure.ac  libtool
autom4te.cache/: output.0  output.1  requests  traces.0  traces.1
data/: manpage.txt
man/: SemesterLeistung.1
po/: Makefile  Makefile.in
src/: ConnectionHub.c  ConnectionHub.vala  EmailSender.c  EmailSender.vala  GlobalLog.c  GlobalLog.vala  Makefile  Makefile.am  Makefile.in  Message.c  Message.vala  PluginManager.c  PluginManager.vala  PluginRegistrar.c  PluginRegistrar.vala  SemesterLeistung  SmtpConfiguration.c  SmtpConfiguration.vala  config.xml  main.c  main.vala
src/.deps/: ChangeNameEvent.Po  Channel.Po  Command.Po  ConfigurationFile.Po  ConnectionHub.Po  DataAccess.Po  DateTimeConverter.Po  EmailSender.Po  Entity.Po  Event.Po  GlobalLog.Po  IChangeNameEvent.Po  IDataAccess.Po  IEvent.Po  IMessageEvent.Po  IRCConnection.Po  IStatusEvent.Po  ListHelper.Po  Message.Po  MessageEvent.Po  PluginManager.Po  PluginRegistrar.Po  ServerConfiguration.Po  SmtpConfiguration.Po  SqliteData.Po  StatusEvent.Po  TypeHelper.Po  User.Po  main.Po
src/Configuration/: ConfigurationFile.c  ConfigurationFile.vala  ServerConfiguration.c  ServerConfiguration.vala
src/Data/: DataAccess.c  DataAccess.vala  IDataAccess.c  IDataAccess.vala  SqliteData.c  SqliteData.vala
src/Events/: ChangeNameEvent.c  ChangeNameEvent.vala  Event.c  Event.vala  IChangeNameEvent.c  IEvent.c  IMessageEvent.c  IStatusEvent.c  MessageEvent.c  MessageEvent.vala  StatusEvent.c  StatusEvent.vala
src/Helpers/: DateTimeConverter.c  DateTimeConverter.vala  ListHelper.c  ListHelper.vala  TypeHelper.c  TypeHelper.vala
src/IRC/: Channel.c  Channel.vala  Command.c  Command.vala  Entity.c  Entity.vala  IRCConnection.c  IRCConnection.vala  User.c  User.vala
